# rag_with_kafka_n_ws

./: Docker-compose.yaml  Dockerfile  README.md  deploy.ps1  image_checker.ps1  index.html  main.py  pyproject.toml  requirements.txt  server_start.sh
api/: deps.py  schema.py
api/v1/: api_route.py  deps.py
app/: main.py
app/api/: deps.py  schema.py
app/core/: config.py  security.py
app/infra/: retriever.py
app/models/: parent_documents.py  user.py
app/repositories/: pd_repository.py  user.py
app/schemas/: agent.py  base.py  source.py  user.py
app/services/: agent_service.py  ingest_service.py  rag_service.py  react_exam.py  user_service.py
app/utils/: jwt_util.py  logging.py  str_util.py  subscribe_supabase.py
clients/: qdrant_vdb.py
cmn/: event_loop.py  exception.py
core/: access_logging.py  config.py  constants.py  exception_handlers.py  executors.py  logging.py
core/exception/: handlers.py
deploy/: configmap.yaml  deployment.yaml  ingress.yaml  kafka.yaml  postgre-deployment.yaml  postgre-service.yaml  postgre_init-job.yaml  secret.yaml  service.yaml  supabase-deployment.yaml  supabase-service.yaml
infra/: schema.py
k8s/: deployment.yaml  ingress.yaml  pv.yaml  qdrant-deployment.yaml  secret.yaml
models/: rag.py  source.py
repositories/: source_repository.py
schemas/: base.py  rag.py  source.py  stomp.py
services/: embedding.py  ingest_service.py  kafka_bridge.py  kafka_handlers.py  kafka_service.py  llm_provider.py  qdrant_vdb.py  rag_service.py
utils/: logging.py  stomp_codec.py  thread_utils.py  websocket_utils.py
(+45 files in other folders)
