[project]
name = "rag-pipeline-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.3",
    "fastembed>=0.7.4",
    "langchain-community>=0.3.31",
    "pypdf>=6.4.2",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.2",
]
